# dongle_maker

./: .gitignore  LICENSE  README.md  walkthrough.md
cpp_src/: CMakeLists.txt
cpp_src/common/: crypto_helper.cpp  crypto_helper.h  dongle_common.h
cpp_src/maker/: CMakeLists.txt  dongle_maker.cpp  dongle_maker.h  maker_console.cpp
cpp_src/reader/: CMakeLists.txt  dongle_reader.cpp  dongle_reader.h  reader_console.cpp
dongle_maker_gui/: Form1.Designer.cs  Form1.cs  Program.cs  dongle_maker_gui.csproj  dongle_maker_gui.sln
dongle_maker_gui/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
